--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <footer>
         <span id="description"></span>
-        <h1 id="result">486,00 Reais</h1>
+        <h1 id="result"></h1>
       </footer>
     </main>
 
